src/test/ui/pattern/bindings-after-at/borrowck-pat-ref-mut-and-ref.stderr
warning: the feature `bindings_after_at` is incomplete and may cause the compiler to crash
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:1:12
   |
LL | #![feature(bindings_after_at)]
   |            ^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error: cannot borrow `z` as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:11:9
   |
LL |         ref mut z @ &mut Some(ref a) => {
   |         ---------^^^^^^^^^^^^^-----^
   |         |                     |
   |         |                     immutable borrow occurs here
   |         mutable borrow occurs here

error: cannot borrow `a` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:25:9
   |
LL |     let ref a @ ref mut b = U;
   |         -----^^^---------
   |         |       |
   |         |       mutable borrow occurs here
   |         immutable borrow occurs here

error: cannot borrow `a` as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:27:9
   |
LL |     let ref mut a @ ref b = U;
   |         ---------^^^-----
   |         |           |
   |         |           immutable borrow occurs here
   |         mutable borrow occurs here

error: cannot borrow `a` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:29:9
   |
LL |     let ref a @ (ref mut b, ref mut c) = (U, U);
   |         -----^^^^---------^^---------^
   |         |        |          |
   |         |        |          mutable borrow occurs here
   |         |        mutable borrow occurs here
   |         immutable borrow occurs here

error: cannot borrow `a` as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:31:9
   |
LL |     let ref mut a @ (ref b, ref c) = (U, U);
   |         ---------^^^^-----^^-----^
   |         |            |      |
   |         |            |      immutable borrow occurs here
   |         |            immutable borrow occurs here
   |         mutable borrow occurs here

error: cannot borrow `a` as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:34:9
   |
LL |     let ref mut a @ ref b = u();
   |         ---------^^^-----
   |         |           |
   |         |           immutable borrow occurs here
   |         mutable borrow occurs here

error: cannot borrow `a` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:39:9
   |
LL |     let ref a @ ref mut b = u();
   |         -----^^^---------
   |         |       |
   |         |       mutable borrow occurs here
   |         immutable borrow occurs here

error: cannot borrow `a` as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:45:9
   |
LL |     let ref mut a @ ref b = U;
   |         ---------^^^-----
   |         |           |
   |         |           immutable borrow occurs here
   |         mutable borrow occurs here

error: cannot borrow `a` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:49:9
   |
LL |     let ref a @ ref mut b = U;
   |         -----^^^---------
   |         |       |
   |         |       mutable borrow occurs here
   |         immutable borrow occurs here

error: cannot borrow `a` as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:55:9
   |
LL |         ref mut a @ Ok(ref b) | ref mut a @ Err(ref b) => {
   |         ---------^^^^^^-----^
   |         |              |
   |         |              immutable borrow occurs here
   |         mutable borrow occurs here

error: cannot borrow `a` as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:55:33
   |
LL |         ref mut a @ Ok(ref b) | ref mut a @ Err(ref b) => {
   |                                 ---------^^^^^^^-----^
   |                                 |               |
   |                                 |               immutable borrow occurs here
   |                                 mutable borrow occurs here

error: cannot borrow `a` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:64:9
   |
LL |         ref a @ Ok(ref mut b) | ref a @ Err(ref mut b) => {
   |         -----^^^^^^---------^
   |         |          |
   |         |          mutable borrow occurs here
   |         immutable borrow occurs here

error: cannot borrow `a` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:64:33
   |
LL |         ref a @ Ok(ref mut b) | ref a @ Err(ref mut b) => {
   |                                 -----^^^^^^^---------^
   |                                 |           |
   |                                 |           mutable borrow occurs here
   |                                 immutable borrow occurs here

error: cannot borrow `a` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:75:9
   |
LL |         ref a @ Ok(ref mut b) | ref a @ Err(ref mut b) if { *b = U; false } => {}
   |         -----^^^^^^---------^
   |         |          |
   |         |          mutable borrow occurs here
   |         immutable borrow occurs here

error: cannot borrow `a` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:75:33
   |
LL |         ref a @ Ok(ref mut b) | ref a @ Err(ref mut b) if { *b = U; false } => {}
   |                                 -----^^^^^^^---------^
   |                                 |           |
   |                                 |           mutable borrow occurs here
   |                                 immutable borrow occurs here

error: cannot borrow `a` as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:82:9
   |
LL |         ref mut a @ Ok(ref b) | ref mut a @ Err(ref b) if { *a = Err(U); false } => {}
   |         ---------^^^^^^-----^
   |         |              |
   |         |              immutable borrow occurs here
   |         mutable borrow occurs here

error: cannot borrow `a` as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:82:33
   |
LL |         ref mut a @ Ok(ref b) | ref mut a @ Err(ref b) if { *a = Err(U); false } => {}
   |                                 ---------^^^^^^^-----^
   |                                 |               |
   |                                 |               immutable borrow occurs here
   |                                 mutable borrow occurs here

error: cannot borrow `a` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:89:9
   |
LL |         ref a @ Ok(ref mut b) | ref a @ Err(ref mut b) if { drop(b); false } => {}
   |         -----^^^^^^---------^
   |         |          |
   |         |          mutable borrow occurs here
   |         immutable borrow occurs here

error: cannot borrow `a` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:89:33
   |
LL |         ref a @ Ok(ref mut b) | ref a @ Err(ref mut b) if { drop(b); false } => {}
   |                                 -----^^^^^^^---------^
   |                                 |           |
   |                                 |           mutable borrow occurs here
   |                                 immutable borrow occurs here

error: cannot borrow `a` as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:96:9
   |
LL |         ref mut a @ Ok(ref b) | ref mut a @ Err(ref b) if { drop(a); false } => {}
   |         ---------^^^^^^-----^
   |         |              |
   |         |              immutable borrow occurs here
   |         mutable borrow occurs here

error: cannot borrow `a` as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:96:33
   |
LL |         ref mut a @ Ok(ref b) | ref mut a @ Err(ref b) if { drop(a); false } => {}
   |                                 ---------^^^^^^^-----^
   |                                 |               |
   |                                 |               immutable borrow occurs here
   |                                 mutable borrow occurs here

error: cannot borrow `a` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:103:9
   |
LL |     let ref a @ (ref mut b, ref mut c) = (U, U);
   |         -----^^^^---------^^---------^
   |         |        |          |
   |         |        |          mutable borrow occurs here
   |         |        mutable borrow occurs here
   |         immutable borrow occurs here

error: cannot borrow `a` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:108:9
   |
LL |     let ref a @ (ref mut b, ref mut c) = (U, U);
   |         -----^^^^---------^^---------^
   |         |        |          |
   |         |        |          mutable borrow occurs here
   |         |        mutable borrow occurs here
   |         immutable borrow occurs here

error: cannot borrow `a` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:115:9
   |
LL |     let ref a @ (ref mut b, ref mut c) = (U, U);
   |         -----^^^^---------^^---------^
   |         |        |          |
   |         |        |          mutable borrow occurs here
   |         |        mutable borrow occurs here
   |         immutable borrow occurs here

error: cannot borrow `a` as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:120:9
   |
LL |     let ref mut a @ (ref b, ref c) = (U, U);
   |         ---------^^^^-----^^-----^
   |         |            |      |
   |         |            |      immutable borrow occurs here
   |         |            immutable borrow occurs here
   |         mutable borrow occurs here

error[E0502]: cannot borrow `_` as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:11:31
   |
LL |         ref mut z @ &mut Some(ref a) => {
   |         ----------------------^^^^^-
   |         |                     |
   |         |                     immutable borrow occurs here
   |         mutable borrow occurs here
...
LL |             **z = None;
   |             ---------- mutable borrow later used here

error[E0502]: cannot borrow `_` as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:34:21
   |
LL |     let ref mut a @ ref b = u();
   |         ------------^^^^^
   |         |           |
   |         |           immutable borrow occurs here
   |         mutable borrow occurs here
...
LL |     *a = u();
   |     -------- mutable borrow later used here

error[E0502]: cannot borrow `_` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:39:17
   |
LL |     let ref a @ ref mut b = u();
   |         --------^^^^^^^^^
   |         |       |
   |         |       mutable borrow occurs here
   |         immutable borrow occurs here
...
LL |     drop(a);
   |          - immutable borrow later used here

error[E0502]: cannot borrow `_` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:64:20
   |
LL |         ref a @ Ok(ref mut b) | ref a @ Err(ref mut b) => {
   |         -----------^^^^^^^^^-
   |         |          |
   |         |          mutable borrow occurs here
   |         immutable borrow occurs here
...
LL |             drop(a);
   |                  - immutable borrow later used here

error[E0502]: cannot borrow `_` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:64:45
   |
LL |         ref a @ Ok(ref mut b) | ref a @ Err(ref mut b) => {
   |                                 ------------^^^^^^^^^-
   |                                 |           |
   |                                 |           mutable borrow occurs here
   |                                 immutable borrow occurs here
...
LL |             drop(a);
   |                  - immutable borrow later used here

error[E0594]: cannot assign to `*b`, as it is immutable for the pattern guard
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:75:61
   |
LL |         ref a @ Ok(ref mut b) | ref a @ Err(ref mut b) if { *b = U; false } => {}
   |                                                             ^^^^^^ cannot assign
   |
   = note: variables bound in patterns are immutable until the end of the pattern guard

error[E0594]: cannot assign to `*a`, as it is immutable for the pattern guard
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:82:61
   |
LL |         ref mut a @ Ok(ref b) | ref mut a @ Err(ref b) if { *a = Err(U); false } => {}
   |                                                             ^^^^^^^^^^^ cannot assign
   |
   = note: variables bound in patterns are immutable until the end of the pattern guard

error[E0507]: cannot move out of `b` in pattern guard
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:89:66
   |
LL |         ref a @ Ok(ref mut b) | ref a @ Err(ref mut b) if { drop(b); false } => {}
   |                                                                  ^ move occurs because `b` has type `&mut main::U`, which does not implement the `Copy` trait
   |
   = note: variables bound in patterns cannot be moved from until after the end of the pattern guard

error[E0507]: cannot move out of `a` in pattern guard
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:96:66
   |
LL |         ref mut a @ Ok(ref b) | ref mut a @ Err(ref b) if { drop(a); false } => {}
   |                                                                  ^ move occurs because `a` has type `&mut std::result::Result<main::U, main::U>`, which does not implement the `Copy` trait
   |
   = note: variables bound in patterns cannot be moved from until after the end of the pattern guard

error[E0502]: cannot borrow `_` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:108:18
   |
LL |     let ref a @ (ref mut b, ref mut c) = (U, U);
   |         ---------^^^^^^^^^------------
   |         |        |
   |         |        mutable borrow occurs here
   |         immutable borrow occurs here
...
LL |     drop(a);
   |          - immutable borrow later used here

error[E0502]: cannot borrow `_` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:108:29
   |
LL |     let ref a @ (ref mut b, ref mut c) = (U, U);
   |         --------------------^^^^^^^^^-
   |         |                   |
   |         |                   mutable borrow occurs here
   |         immutable borrow occurs here
...
LL |     drop(a);
   |          - immutable borrow later used here

error[E0502]: cannot borrow `_` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:115:18
   |
LL |     let ref a @ (ref mut b, ref mut c) = (U, U);
   |         ---------^^^^^^^^^------------
   |         |        |
   |         |        mutable borrow occurs here
   |         immutable borrow occurs here
...
LL |     drop(a);
   |          - immutable borrow later used here

error[E0502]: cannot borrow `_` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:115:29
   |
LL |     let ref a @ (ref mut b, ref mut c) = (U, U);
   |         --------------------^^^^^^^^^-
   |         |                   |
   |         |                   mutable borrow occurs here
   |         immutable borrow occurs here
...
LL |     drop(a);
   |          - immutable borrow later used here

error: aborting due to 38 previous errors

Some errors have detailed explanations: E0502, E0507, E0594.
For more information about an error, try `rustc --explain E0502`.
